--- a/front-end/src/app/connect-admin/connect-admin.component.html
+++ b/front-end/src/app/connect-admin/connect-admin.component.html
@@ -38,7 +38,7 @@
             </div>
             <div class="u-form-email u-form-group u-label-none">
               <label for="email-ef64" class="u-label">mdp</label>
-              <input type="email" placeholder="mot de passe" id="email-ef64" [(ngModel)] ="auth.mdp" name="mdp" class="u-border-3 u-border-palette-4-base u-input u-input-rectangle u-white" required="">
+              <input type="password" placeholder="mot de passe" id="email-ef64" [(ngModel)] ="auth.mdp" name="mdp" class="u-border-3 u-border-palette-4-base u-input u-input-rectangle u-white" required="">
             </div>
             <div class="u-form-group u-form-submit">
               <button type="button" class="btn btn-primary" (click)="onClickSubmit()">Soumettre</button>
