--- a/front-end/src/app/interface-client/interface-client.component.html
+++ b/front-end/src/app/interface-client/interface-client.component.html
@@ -47,7 +47,7 @@
                 </div>
                   <br><br>
 
-                  <button type="button" class="btn btn-primary btn-lg" style="background-color: palevioletred" (click)="onClickSubmit()">Large button</button>
+                  <button type="button" class="btn btn-primary btn-lg" style="background-color: palevioletred" (click)="onClickSubmit()">Soumettre </button>
                   
                 </form>
               </div>
