--- a/front-end/src/app/home-component/home-component.component.html
+++ b/front-end/src/app/home-component/home-component.component.html
@@ -229,7 +229,7 @@
           </div>
         </div>
       </div>
-      <img class="u-image u-image-default u-preserve-proportions u-image-1" src="/assets/images/72f227b3-95c6-9c71-01e0-22b2626b426d.jpg" alt="" data-image-width="363" data-image-height="363">
+      <img class="u-image u-image-round u-preserve-proportions u-radius-32 u-image-1" src="/assets/images/default-image-24.jpg" alt="" data-image-width="5000" data-image-height="33" >
     </section>
     <section class="u-clearfix u-palette-2-base u-valign-middle u-section-7" id="carousel_d4ba">
       <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
@@ -247,9 +247,10 @@
           </div>
         </div>
       </div>
-      <img class="u-image u-image-default u-preserve-proportions u-image-1" src="/assets/images/72f227b3-95c6-9c71-01e0-22b2626b426d.jpg" alt="" data-image-width="363" data-image-height="363">
+      <img class="u-image u-image-round u-preserve-proportions u-radius-32 u-image-1" src="/assets/images/interface-client.png" alt="" data-image-width="5000" data-image-height="363" style="width: 40%; height: 10%;">
     </section>
     <section class="u-clearfix u-valign-middle u-white u-section-8" id="carousel_eeb2">
+      <br>
       <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
         <div class="u-gutter-0 u-layout">
           <div class="u-layout-row">
@@ -264,7 +265,7 @@
           </div>
         </div>
       </div>
-      <img class="u-image u-image-default u-preserve-proportions u-image-1" src="/assets/images/72f227b3-95c6-9c71-01e0-22b2626b426d.jpg" alt="" data-image-width="363" data-image-height="363">
+      <img class="u-image u-image-round u-preserve-proportions u-radius-32 u-image-1" src="/assets/images/default-image-24.jpg" alt="" data-image-width="5000" data-image-height="363">
     </section>
     <section class="u-clearfix u-palette-2-base u-valign-middle u-section-9" id="carousel_87f4">
       <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
@@ -273,7 +274,7 @@
             <div class="u-align-left u-container-style u-layout-cell u-size-30 u-layout-cell-1">
               <div class="u-container-layout u-container-layout-1">
                 <p class="u-align-left u-text u-text-1"><b>Etape 3</b>
-                  <br>Lorsque votre tour approche, vous en seriez notifié ;)
+                  <br>Visualisez l'état de votre file!
                 </p>
               </div>
             </div>
@@ -281,7 +282,7 @@
           </div>
         </div>
       </div>
-      <img class="u-image u-image-default u-preserve-proportions u-image-1" src="/assets/images/72f227b3-95c6-9c71-01e0-22b2626b426d.jpg" alt="" data-image-width="363" data-image-height="363">
+      <img class="u-image u-image-round u-preserve-proportions u-radius-32 u-image-1" src="/assets/images/Interface-client2.png" alt="" data-image-width="5000" data-image-height="363" style="width: 40%; height: 10%;">
     </section>
     <section class="u-clearfix u-gradient u-section-10" id="carousel_5467">
       
