--- a/front-end/src/app/interface-admin/interface-admin.component.html
+++ b/front-end/src/app/interface-admin/interface-admin.component.html
@@ -43,7 +43,7 @@
           <a href="https://nicepage.com/wysiwyg-html-editor" class="u-active-none u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-top-left-radius-0 u-top-right-radius-0 u-btn-1"><span class="u-icon u-icon-2"><svg class="u-svg-content" viewBox="0 0 405.333 405.333" x="0px" y="0px" style="width: 1em; height: 1em;"><path d="M373.333,266.88c-25.003,0-49.493-3.904-72.704-11.563c-11.328-3.904-24.192-0.896-31.637,6.699l-46.016,34.752    c-52.8-28.181-86.592-61.952-114.389-114.368l33.813-44.928c8.512-8.512,11.563-20.971,7.915-32.64    C142.592,81.472,138.667,56.96,138.667,32c0-17.643-14.357-32-32-32H32C14.357,0,0,14.357,0,32    c0,205.845,167.488,373.333,373.333,373.333c17.643,0,32-14.357,32-32V298.88C405.333,281.237,390.976,266.88,373.333,266.88z"></path></svg><img></span>&nbsp;{{account.phoneNumber}}
           </a>
           <p class="u-text u-text-default u-text-2">{{account.email}}</p><span class="u-file-icon u-icon u-icon-3"><img src="/assets/images/3178158.png" alt=""></span>
-          <p class="u-text u-text-default u-text-2">{{account.id}}</p>
+          <p class="u-text u-text-default u-text-2" style="justify-self: right;"><strong>l'id du service :</strong>{{account.id}}</p>
         </div>
       </div>
       <h1 class="u-text u-text-3">Gérez vos files</h1>
@@ -80,8 +80,10 @@
         </table>
       </div>
       <br><br><br><br>
-      <a href="ajouter-file" class="u-border-none u-btn u-btn-round u-button-style u-palette-2-light-1 u-radius-50 u-text-body-alt-color u-btn-2">AJOUter une file</a>
-      <a href="modifier-file" class="u-border-none u-btn u-btn-round u-button-style u-palette-2-light-1 u-radius-50 u-text-body-alt-color u-btn-3">Modifier une file</a>
+      <a class="u-border-none u-btn u-btn-round u-button-style u-palette-2-light-1 u-radius-50 u-text-body-alt-color u-btn-2">
+        <button style="background: transparent;border: none;" (click)="submitAjouter()">Ajouter une file</button></a>
+      <a class="u-border-none u-btn u-btn-round u-button-style u-palette-2-light-1 u-radius-50 u-text-body-alt-color u-btn-3">
+        <button style="background: transparent;border: none;" (click)="submitModifier()">Modifier une file</button></a>
     </section>
     
     
